src/objects/Domain__c.object
<CustomObject>
    <description>CommCare Integration</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Account (Organization)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Domain</relationshipLabel>
        <relationshipName>Domain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Countries_Picklist__c</fullName>
        <label>Countries Picklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NIGER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Countries_Wrapper__c</fullName>
        <description>Countires wrapper field, we want use aggregate queries on country list but it is A big text area (Deployment_Countries__c).</description>
        <label>Countries Wrapper</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_deployment_salesforce__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the lookup for Country in Salesforce, not CommCareHQ</description>
        <label>Country of deployment (salesforce)</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Domain</relationshipLabel>
        <relationshipName>Domain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cp_last_update__c</fullName>
        <label>Domain cp last update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cp_n_users_submitted_form__c</fullName>
        <label>Domain cp n users submitted form</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Countries__c</fullName>
        <label>Countries</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_city__c</fullName>
        <label>Deployment city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_country__c</fullName>
        <label>Deployment country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_date__c</fullName>
        <label>Deployment date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deployment_description__c</fullName>
        <label>Deployment description</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployment public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_region__c</fullName>
        <label>Deployment region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true it means that domain was marked as deleted in HQ. Do not update this field manually, it&apos;s automatically set by apex code.</description>
        <inlineHelpText>If set to true it means that domain was marked as deleted in HQ. Do not update this field manually, it&apos;s automatically set by apex code.</inlineHelpText>
        <label>Domain Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_cp_has_project_icon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_cp_has_project_icon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_30_day_user_cases__c</fullName>
        <label>Domain_cp_n_30_day_user_cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_apps__c</fullName>
        <label>Domain_cp_n_apps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_apps_with_icon__c</fullName>
        <label>Domain_cp_n_apps_with_icon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_apps_with_multi_lang__c</fullName>
        <label>Domain_cp_n_apps_with_multi_lang</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_case_exports__c</fullName>
        <label>Domain_cp_n_case_exports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_case_sharing_groups__c</fullName>
        <label>Domain_cp_n_case_sharing_groups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_case_sharing_olevels__c</fullName>
        <label>Domain_cp_n_case_sharing_olevels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_click_app_deploy__c</fullName>
        <label>Domain_cp_n_click_app_deploy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_custom_roles__c</fullName>
        <label>Domain_cp_n_custom_roles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_deid_exports__c</fullName>
        <label>Domain_cp_n_deid_exports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_downloads_custom_exports__c</fullName>
        <label>Domain_cp_n_downloads_custom_exports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_form_builder_entered__c</fullName>
        <label>Domain_cp_n_form_builder_entered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_loc_restricted_roles__c</fullName>
        <label>Domain_cp_n_loc_restricted_roles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_lookup_tables__c</fullName>
        <label>Domain_cp_n_lookup_tables</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_rb_reports__c</fullName>
        <label>Domain_cp_n_rb_reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_repeaters__c</fullName>
        <label>Domain_cp_n_repeaters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_reports_created__c</fullName>
        <label>Domain_cp_n_reports_created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_reports_edited__c</fullName>
        <label>Domain_cp_n_reports_edited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_saved_app_changes__c</fullName>
        <label>Domain_cp_n_saved_app_changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_saved_exports__c</fullName>
        <label>Domain_cp_n_saved_exports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_saved_scheduled_reports__c</fullName>
        <label>Domain_cp_n_saved_scheduled_reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_trivet_backends__c</fullName>
        <label>Domain_cp_n_trivet_backends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_ucr_reports__c</fullName>
        <label>Domain_cp_n_ucr_reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_viewed_non_ucr_reports__c</fullName>
        <label>Domain_cp_n_viewed_non_ucr_reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_n_viewed_ucr_reports__c</fullName>
        <label>Domain_cp_n_viewed_ucr_reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_cp_sms_30_d__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_cp_sms_30_d</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_cp_sms_ever__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_cp_sms_ever</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_cp_use_domain_security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_cp_use_domain_security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_cp_using_locations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_cp_using_locations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_date_created_date_wrapper__c</fullName>
        <description>Wraps date created from Date/Time to Date. User for purpose of group by in SOQL query</description>
        <label>Domain date created date wrapper</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Domain_first_form_sub_date_wrapper__c</fullName>
        <description>Wraps date first form submission from Date/Time to Date. User for purpose of group by in SOQL query</description>
        <label>Domain first form sub date wrapper</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Domain_has_used_features__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Experimental from Gillian - do not use. Marks which domains have used features at any point in time.</description>
        <label>[Experimental] Domain_has_used_features</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_last_form_sub_date_wrapper__c</fullName>
        <description>Wraps last form submission from Date/Time to Date. User for purpose of group by in SOQL query</description>
        <label>Domain last form sub date wrapper</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Downgrade_notes__c</fullName>
        <description>This field is meant to capture any anecdotal notes we have about why a project space chose to downgrade</description>
        <inlineHelpText>CS/ Sales-- enter any relevant information you have about why this domain downgraded their plan</inlineHelpText>
        <label>Downgrade notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>creating_user__c</formula>
        <label>Contact: Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Project_Space__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enterprise Project Space</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forms_for_Period_TMP__c</fullName>
        <label>Forms for Period TMP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forms_for_Period__c</fullName>
        <label>Forms for Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_J2ME_submission_in_past_90_days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has J2ME submission in past 90 days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalProp_Business_Unit__c</fullName>
        <formula>Internal_Properties__r.InternalProp_Business_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectSpace_Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_area__c</fullName>
        <formula>Internal_Properties__r.area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_can_use_data__c</fullName>
        <formula>Internal_Properties__r.can_use_data__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can_use_data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalProp_commcare_edition__c</fullName>
        <formula>Internal_Properties__r.commcare_edition__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_commcare_edition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_commtrack_domain__c</fullName>
        <formula>Internal_Properties__r.commtrack_domain__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_commtrack_domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalProp_custom_eula__c</fullName>
        <formula>Internal_Properties__r.custom_eula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom_EULA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalProp_goal_followup_rate__c</fullName>
        <formula>Internal_Properties__r.goal_followup_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_goal_followup_rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalProp_goal_time_period__c</fullName>
        <formula>Internal_Properties__r.goal_time_period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_goal_time_period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalProp_initiative__c</fullName>
        <formula>Internal_Properties__r.initiative__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_initiative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_organization_name__c</fullName>
        <formula>Internal_Properties__r.organization_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_organization_name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_phone_model__c</fullName>
        <formula>Internal_Properties__r.phone_model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_phone_model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_platform__c</fullName>
        <formula>Internal_Properties__r.platform__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_project_manager__c</fullName>
        <formula>Internal_Properties__r.project_manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_project_manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_project_state__c</fullName>
        <formula>Internal_Properties__r.project_state__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_project_state</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_self_started__c</fullName>
        <formula>Internal_Properties__r.self_started__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_self_started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalProp_services__c</fullName>
        <formula>Internal_Properties__r.services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_sf_account_id__c</fullName>
        <formula>Internal_Properties__r.sf_account_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_sf_account_id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_sf_contract_id__c</fullName>
        <formula>Internal_Properties__r.sf_contract_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_sf_contract_id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_sub_area__c</fullName>
        <formula>Internal_Properties__r.sub_area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_sub_area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_using_adm__c</fullName>
        <formula>Internal_Properties__r.using_adm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_using_adm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalProp_using_call_center__c</fullName>
        <formula>Internal_Properties__r.using_call_center__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_using_call_center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalProp_workshop_region__c</fullName>
        <formula>Internal_Properties__r.workshop_region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalProp_workshop_region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Properties__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Properties</label>
        <referenceTo>Internal_Properties__c</referenceTo>
        <relationshipLabel>Domain</relationshipLabel>
        <relationshipName>Domain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Inside_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if went through the inside sales process</description>
        <inlineHelpText>Check if went through the inside sales process</inlineHelpText>
        <label>Is Inside Sales?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Domain</relationshipLabel>
        <relationshipName>Domain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lifetime_MRR__c</fullName>
        <label>Lifetime MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Likely_Real__c</fullName>
        <description>over 300 forms</description>
        <formula>cpAllForms__c &gt;= 300</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Likely Real</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Months_since_created__c</fullName>
        <formula>(TODAY() -   DATEVALUE(CreatedDate) )  / 30.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months since created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to exclude the domain from showing up in this report: https://dimagi.my.salesforce.com/00Ob0000004eeG6</description>
        <label>Not Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onboarding_package__c</fullName>
        <description>Has this domain purchased an onboarding package (executed by Customer Success team)?</description>
        <inlineHelpText>Has this domain purchased an onboarding package (executed by Customer Success team)?</inlineHelpText>
        <label>Onboarding package</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Introductory (~4 hours)</fullName>
                </value>
                <value>
                    <fullName>Quick-start (~ 6 hrs)</fullName>
                </value>
                <value>
                    <fullName>Advanced onboarding (~15 hrs)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Domain</relationshipLabel>
        <relationshipName>Domain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin_of_project_space__c</fullName>
        <label>Origin of project space</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indirect Inside Sales (Sales team connection but no opp)</fullName>
                </value>
                <value>
                    <fullName>Organic growth of Inside Sales customer (New project space)</fullName>
                </value>
                <value>
                    <fullName>Organic Growth of non inside sales customer</fullName>
                </value>
                <value>
                    <fullName>Organic growth of GS clients</fullName>
                </value>
                <value>
                    <fullName>BD team</fullName>
                </value>
                <value>
                    <fullName>Other Dimagi Referral (mostly GS team)</fullName>
                </value>
                <value>
                    <fullName>Partner Program</fullName>
                </value>
                <value>
                    <fullName>Unknown/ Likely real self-start</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Program_Organization__c</fullName>
        <description>Used to identify the Partner Program organization name</description>
        <inlineHelpText>Select the Partner Program organization from the dropdown menu</inlineHelpText>
        <label>Partner Program Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AgImpact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify domains in the Partner Program</description>
        <inlineHelpText>Check box if domain is part of the Partner Program</inlineHelpText>
        <label>Partner Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Domain</relationshipLabel>
        <relationshipName>Domain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proactive_CS_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True/False based on whether or not CS has reached out proactively to help this user.</description>
        <inlineHelpText>Check if we have reached out proactively to give CS support to this partner.</inlineHelpText>
        <label>Proactive CS Support Given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Length__c</fullName>
        <description>Project length in days (first to last form submission)</description>
        <formula>cpLastFormSubmissionDate__c -  cpFirstFormSubmissionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project length in days (first to last form submission)</inlineHelpText>
        <label>Project Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CommCareHQ</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CommCareHQ India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_Project_Space_Settings_in_HQ__c</fullName>
        <formula>IF(TEXT(Server_Name__c) = &quot;CommCareHQ&quot;, 
HYPERLINK(&quot;https://www.commcarehq.org/a/&quot;&amp; Name &amp;&quot;/settings/project/basic/&quot;, &quot;View Project Space Settings HQ&quot;, &quot;_self&quot;),
HYPERLINK(&quot;https://india.commcarehq.org/a/&quot;&amp; Name &amp;&quot;/settings/project/basic/&quot;, &quot;View Project Space Settings HQ&quot;, &quot;_self&quot;))</formula>
        <label>View Project Space Settings in HQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wam_TMP__c</fullName>
        <description>Field used for backed calculations, do not use it</description>
        <inlineHelpText>Field used for backed calculations, do not use it</inlineHelpText>
        <label>Wam TMP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wam__c</fullName>
        <label>Wam</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>attribution_notes__c</fullName>
        <label>Domain_attribution_notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>author__c</fullName>
        <label>Domain_author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billable_client__c</fullName>
        <label>Domain_billable_client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_address_city__c</fullName>
        <label>Domain_billing_address_city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_address_country__c</fullName>
        <label>Domain_billing_address_country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_address_doc_type__c</fullName>
        <label>Domain_billing_address_doc_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_address_name__c</fullName>
        <label>Domain_billing_address_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_address_postal_code__c</fullName>
        <label>Domain_billing_address_postal_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_address_state_province__c</fullName>
        <label>Domain_billing_address_state_province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_number__c</fullName>
        <label>Domain_billing_number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>case_sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_case_sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cda_date__c</fullName>
        <label>cda_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cda_doc_type__c</fullName>
        <label>cda_doc_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cda_signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>cda_signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cda_type__c</fullName>
        <label>cda_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cda_user_id__c</fullName>
        <label>cda_user_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cda_user_ip__c</fullName>
        <label>cda_user_ip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cda_version__c</fullName>
        <label>cda_version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chat_message_count_threshold__c</fullName>
        <label>Domain_chat_message_count_threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cloudcare_releases__c</fullName>
        <label>Domain_cloudcare_releases</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commconnect_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_commconnect_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>commtrack_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_commtrack_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>count_messages_as_read_by_anyone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_count_messages_as_read_by_anyone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cp300thFormSubmission__c</fullName>
        <label>Domain_cp_300th_form_submission</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpActiveMobileUsers__c</fullName>
        <label>Domain_cp_active_mobile_users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllActiveCases__c</fullName>
        <label>Domain_cp_all_active_cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllCases__c</fullName>
        <label>Domain_cp_all_cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllForms__c</fullName>
        <label>Domain_cp_all_forms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllInactiveCases__c</fullName>
        <label>Domain_cp_all_inactive_cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllIncomingSms__c</fullName>
        <label>Domain_cp_all_incoming_sms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllMobileUsers__c</fullName>
        <label>Domain_cp_all_mobile_users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllOutgoingSms__c</fullName>
        <label>Domain_cp_all_outgoing_sms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllSmsIn30Days__c</fullName>
        <label>Domain_cp_all_sms_in_30_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllSmsIn60Days__c</fullName>
        <label>Domain_cp_all_sms_in_60_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllSmsIn90Days__c</fullName>
        <label>Domain_cp_all_sms_in_90_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllSms__c</fullName>
        <label>Domain_cp_all_sms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpAllWebUsers__c</fullName>
        <label>Domain_cp_all_web_users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>